--- a/views/main/layout.ejs
+++ b/views/main/layout.ejs
@@ -26,7 +26,7 @@
 
 <body class="scroll-smooth">
 
-    <main class="w-full md:flex md:justify-start bg-black text-white h-screen overflow-hidden mx-auto relative">
+    <main class="w-full md:flex md:justify-start bg-black text-white h-dvh overflow-hidden mx-auto relative">
 
 
         <%- include("../components/flash.ejs") -%>
